# skalpel

./: .gitignore  README.md  aplast.py  aplex.py  aplparse.py  parse  pyproject.toml  requirements.txt  t.py  test_aplex.py  test_parser.py
.github/workflows/: codecov.yml
apl/: BOXERRORS.txt  LICENSE  aplarr.py.bak  arr.py  box.py  errors.py  funs.py  node.py  ops.py  parser.py  repl.py  runtime.py  skalpel.py  stack.py  tokeniser.py  voc.py
tests/: aplbasic.txt  test_arr.py  test_funs.py  test_node.py  test_ops.py  test_parser.py  test_skalpel.py  test_tokeniser.py
