[tool.poetry]
name = "aplex"
version = "0.1.0"
description = ""
authors = ["Stefan Kruger <stefan.kruger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
