[tool.poetry]
name = "aplex"
version = "0.1.0"
description = ""
authors = ["Stefan Kruger <stefan.kruger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bitarray = "^2.6.0"
prompt-toolkit = "^3.0.30"
Pygments = "^2.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
